feat: the room page it's sending request to the post url now

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,6 @@
     <input id="roomName" type="text" placeholder="Room name">
     <button id="joinRoomButton">Get in the romm</button>
 
-<script type="moudle" src="js/index.js"></script>
+<script type="module" src="js/index.js"></script>
 </body>
 </html>
