--- a/web/room.html
+++ b/web/room.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles/room.css">
 </head>
 <body>
-    <span>Room <span id="rommNameLabel"></span></span>
+    <span>Room <span id="roomNameLabel"></span></span>
     <textarea id="notepadContent"></textarea>
 
-<script type="moudle" src="js/room.js"></script>
+<script type="module" src="js/room.js"></script>
 </body>
 </html>
